<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>  
  <groupId>de.digitalcollections</groupId>
  <artifactId>buda-hymir</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <jena.version>3.9.0</jena.version>    
    <version.maven-compiler-plugin>3.8.0</version.maven-compiler-plugin>
    <version.spring-boot>2.0.2.RELEASE</version.spring-boot>
    <aws.version>1.11.433</aws.version>
  </properties>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <!-- version should be the same as version.spring-boot, and the same
         as the version indicated in hymir's pom -->
    <relativePath></relativePath>
    <version>2.0.2.RELEASE</version>
  </parent>
   
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-core -->
    
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/de.digitalcollections/iiif-server-hymir -->
    <dependency>
        <groupId>de.digitalcollections</groupId>
        <artifactId>iiif-server-hymir</artifactId>
        <version>4.1.2</version> 
        <exclusions>
            <exclusion>
                <groupId>de.digitalcollections.imageio</groupId>
                <artifactId>imageio-jnr</artifactId>
            </exclusion>
            <exclusion>
                <groupId>net.bull.javamelody</groupId>
                <artifactId>javamelody-spring-boot-starter</artifactId>
            </exclusion>
        </exclusions>       
    </dependency>    
    <!-- https://mvnrepository.com/artifact/de.digitalcollections/digitalcollections-core-business-api -->
    <dependency>
        <groupId>de.digitalcollections</groupId>
        <artifactId>digitalcollections-core-business-api</artifactId>
        <version>1.2.5</version>
    </dependency>    
    <dependency>
      <groupId>io.bdrc.libraries</groupId>
      <artifactId>bdrc-libraries</artifactId>
      <version>0.8.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/de.digitalcollections.imageio/imageio-turbojpeg -->
    <dependency>
        <groupId>de.digitalcollections.imageio</groupId>
        <artifactId>imageio-turbojpeg</artifactId>
        <version>0.3.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/de.digitalcollections.imageio/imageio-openjpeg -->
    <dependency>
        <groupId>de.digitalcollections.imageio</groupId>
        <artifactId>imageio-openjpeg</artifactId>
        <version>0.3.1</version>
    </dependency>
     <!-- Used by S3 ResourceRepository -->
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-core</artifactId>
      <version>${aws.version}</version>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-s3</artifactId>
      <version>${aws.version}</version>
    </dependency>
   <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
    <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>2.0.16</version>
    </dependency>
    <dependency>
        <groupId>com.itextpdf</groupId>
        <artifactId>itext7-core</artifactId>
        <version>7.1.7</version>
        <type>pom</type>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-arq</artifactId>
        <version>${jena.version}</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.6</version>
    </dependency> 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-jcs-core -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-jcs-core</artifactId>
        <version>2.2.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/io.bdrc/bdrc-auth-lib -->
    <dependency>
        <groupId>io.bdrc</groupId>
        <artifactId>bdrc-auth-lib</artifactId>
        <version>1.3.0</version>
        <!-- exclusions>
        	<exclusion>
        		<groupId>org.slf4j</groupId>
        		<artifactId>slf4j-simple</artifactId>
        	</exclusion>
        </exclusions-->
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2 -->
    <dependency>
        <groupId>com.maxmind.geoip2</groupId>
        <artifactId>geoip2</artifactId>
        <version>2.12.0</version>
    </dependency>    
    <!-- https://mvnrepository.com/artifact/javax.media.jai/com.springsource.javax.media.jai.core -->
    <dependency>
        <groupId>javax.media.jai</groupId>
        <artifactId>com.springsource.javax.media.jai.core</artifactId>
        <version>1.1.3</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/javax.media.jai/com.springsource.javax.media.jai.codec -->
    <dependency>
        <groupId>javax.media.jai</groupId>
        <artifactId>com.springsource.javax.media.jai.codec</artifactId>
        <version>1.1.3</version>
    </dependency>
    <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>native-lib-loader</artifactId>
            <version>2.1.3</version>
        </dependency>
    <!-- https://mvnrepository.com/artifact/org.scijava/native-lib-loader -->
    <dependency>      
        <groupId>iiif.bdrc.io</groupId>  
        <artifactId>webp-imageio</artifactId>  
        <version>0.1.0</version> 
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                  <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>          
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <showDeprecation>true</showDeprecation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <mainClass>de.digitalcollections.iiif.myhymir.Application</mainClass>
          <classifier>exec</classifier>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>    
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>META-INF</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>application.yml</include>
          <include>iiif-versions-custom.yml</include>
        </includes>
      </resource>
    </resources>
    <testResources>
                <testResource>
                    <directory>src/main/resources</directory>
                </testResource>
    </testResources>
  </build>
  <repositories>
    <repository>
      <id>ossrh-snapshots</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>  
    <repository>
        <id>com.springsource.repository.bundles.external</id>
        <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
        <url>http://repository.springsource.com/maven/bundles/external</url>
    </repository> 
   </repositories>  
</project>
